--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ dev_dependencies:
   cloud_firestore: ^3.1.10
   cloud_firestore_web: ^2.6.10
   appwrite: ^6.0.0
-
-
+  routemaster: ^1.0.1
+  provider: ^6.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
