--- a/database/appwrite/appwrite.json
+++ b/database/appwrite/appwrite.json
@@ -200,6 +200,17 @@
             "ASC",
             "ASC"
           ]
+        },
+        {
+          "key": "mid",
+          "type": "key",
+          "status": "available",
+          "attributes": [
+            "mid"
+          ],
+          "orders": [
+            "ASC"
+          ]
         }
       ]
     }
