--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dev_dependencies:
   routemaster: ^1.0.1
   provider: ^6.0.1
   font_awesome_flutter: ^10.1.0
+  shimmer: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
