--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,14 @@ dev_dependencies:
   provider: ^6.0.1
   font_awesome_flutter: ^10.1.0
   shimmer: ^2.0.0
+
+  firebase_storage: ^10.3.4
+  dart_appwrite: ^6.0.0
+  md5_file_checksum: ^1.0.3
+  convert: ^3.0.2
+  crypto: ^3.0.2
+  flutter_dropzone: ^3.0.5
+  socket_io_client: ^2.0.0
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
